# python-marimo

./: .gitignore  README.md  main.py  pyproject.toml
experiments/marimo/: simple_cells.py
experiments/math/: complex_exponentiation.py
src/notebooks/experiments/math/: complex_exponentiation.py  division.py
