[project]
name = "python-marimo"
version = "0.1.0"
description = "playground for experimenting with the `marimo` library"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair[all]>=6.0.0",
    "marimo[mcp]>=0.17.7",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "polars>=1.35.2",
    "pyzmq>=27.1.0",
    "ruff>=0.14.5",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "plotly-stubs>=0.0.6",
    "pylint>=4.0.3",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]

[tool.pylint.main]
py-version = "3.14"

[tool.pylint.basic]
# settings for marimo notebooks
# const-rgx = '([A-Z_][A-Z0-9_]*)|(__.*__)|__generated_with'
good-names = ["i", "j", "k", "_", "__generated_with"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
    # settings for marimo notebooks
    "reimported",
    "import-outside-toplevel",
    "pointless-statement",
    "useless-return",
]

[tool.pyright]
pythonVersion = "3.14"
# settings for marimo notebooks
reportUnusedExpression = false
